# Emerald_Capstone

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: forms.py  views.py
authentication/: forms.py  views.py
authorization/: apps.py  forms.py
comment_app/: admin.py  forms.py  models.py
moto_user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
moto_user/migrations/: 0001_initial.py  0002_initial.py  0003_rename_followers_motouser_following.py
motogram/: asgi.py  settings.py  urls.py  wsgi.py
notification/: apps.py  models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notifications/: admin.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
post/: admin.py  forms.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_delete_follow.py
recipe/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20210719_0408.py  0002_auto_20210719_1350.py  0002_auto_20210719_1621.py  0002_recipe_favorites.py  0003_auto_20210719_1629.py
search/: urls.py  views.py
static/css/: base.css  main.css  style.css
stories_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: 404.html  500.html  all_users.html  base.html  edit_profile.html  favorites.html  following.html  home.html  index.html  logout.html  newpost.html  post_detail.html  profile.html  search-view.html
templates/includes/: footer.html  messages.html  navbar.html
user/: admin.py  models.py  views.py
(+15 files in other folders)
