[tool.poetry]
name = "emerald_capstone"
version = "0.1.0"
description = "Kenzie Q4 Capstone. Duel sport social media site."
authors = ["Danielle Bobb, Caitlin Golden, Haejin, and Kenneth Scribner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.1"
django-notifications-hq = "^1.6.0"

[tool.poetry.dev-dependencies]
Django = "^3.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
